# puppet-openstack-guide

./: .gitignore  .gitreview  README.rst  requirements.txt  setup.cfg  tox.ini
doc/: requirements.txt
doc/source/: backporting.rst  ci.rst  coding-style.rst  community.rst  conf.py  contribute.rst  deploy.rst  getting-started.rst  index.rst  mailing-list.rst  meetings.rst  module-list.rst  new-module.rst  releases.rst  reviews.rst  supported-platforms.rst  talk-to-us.rst  testing-your-code.rst  testing.rst
doc/source/_extra/: .htaccess
doc/source/contributor/: backporting.rst  ci.rst  coding-style.rst  community.rst  contributing.rst  how-to-contribute.rst  index.rst  mailing-list.rst  meetings.rst  module-list.rst  new-module.rst  talk-to-us.rst  testing.rst
doc/source/install/: deploy.rst  getting-started.rst  index.rst  releases.rst  supported-platforms.rst
