[metadata]
name = puppet-openstack-guide
summary = Puppet OpenStack Guide
description-file =
    README.rst
author = OpenStack
author-email = openstack@lists.openstack.org
home-page = https://docs.openstack.org/puppet-openstack-guide/latest/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
