[metadata]
name = puppet-openstack-guide
summary = Puppet OpenStack Guide
description_file =
    README.rst
author = OpenStack
author_email = openstack@lists.openstack.org
home_page = https://docs.openstack.org/puppet-openstack-guide/latest/
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
